@@ -1,5 +1,7 @@
 
 5.72  2015-01-10
+  - Added EXPERIMENTAL support for case-insensitive attribute selectors like
+    [foo="bar" i] to Mojo::DOM::CSS.
   - Improved Mojo::Reactor::EV to update the current time before starting a
     timer.
 
